Fixed the bug with content overflow correctly

--- a/028/common.blocks/page/__inner/page__inner.styl
+++ b/028/common.blocks/page/__inner/page__inner.styl
@@ -7,7 +7,7 @@
 	justify-content space-between
 	align-items center
 	
-	height 100%
+	min-height 100%
 	perspective 1000px
 	
 	@media screen and (max-width: 480px)
