--- a/028/common.blocks/page/page.styl
+++ b/028/common.blocks/page/page.styl
@@ -1,5 +1,4 @@
 .page
-	height 100%
 	font-family 'Source Sans Pro'
 	font-weight 300
 	color #313f47
@@ -46,4 +45,6 @@ html
 	margin 0
 	padding 0
 	width 100%
+	height 100%
+	overflow auto
 	
